syntax = "proto3";
package saonetwork.sao.order;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto"; 
option go_package = "github.com/SaoNetwork/sao/x/order/types";
import "sao/order/renew_info.proto";

message Shard {
  uint64 id = 1;
  uint64 orderId = 2; 
  int32 status = 3; 
  uint64 size = 4;
  string cid = 5; 
  cosmos.base.v1beta1.Coin pledge = 6 [(gogoproto.nullable) = false]; 
  string from = 7;
  string sp = 8;
  uint64 duration = 9;
  uint64 createdAt = 10;
  repeated RenewInfo renewInfos = 11 [(gogoproto.nullable) = false];
}

message ShardInText {
  uint64 id = 1;
  uint64 orderId = 2; 
  string status = 3; 
  uint64 size = 4;
  string cid = 5; 
  cosmos.base.v1beta1.Coin pledge = 6 [(gogoproto.nullable) = false]; 
  string from = 7;
  string sp = 8;
  uint64 duration = 9;
  uint64 createdAt = 10;
  repeated RenewInfo renewInfos = 11 [(gogoproto.nullable) = false];
}
